--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,9 @@
 [deps]
+Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
+FixedEffectModels = "9d5cd8c9-2029-5cab-9928-427838db53e3"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Queryverse = "612083be-0b0f-5412-89c1-4e7c75506a58"
+SharedArrays = "1a1011a3-84de-559e-8e89-a11a2f7dc383"
 
 [compat]
 julia = "1.3"
