--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,10 @@
 [deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+CSVFiles = "5d742f6a-9f54-50ce-8119-2520741973ca"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 FixedEffectModels = "9d5cd8c9-2029-5cab-9928-427838db53e3"
-Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Query = "1a8c2f83-1ff3-5112-b086-8aa67b057ba1"
 Queryverse = "612083be-0b0f-5412-89c1-4e7c75506a58"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SharedArrays = "1a1011a3-84de-559e-8e89-a11a2f7dc383"
-
-[compat]
-julia = "1.3"
